fixed bugs on mobile

--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -105,7 +105,7 @@ $bg-2: #f9f7f7;
     .skill-desc {
       padding: 10px;
       line-height: 1.3;
-      font-size: 1rem !important;
+      font-size: 0.9rem !important;
     }
   }
 }
